--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
  {
     "name": "project_ibs",
     "version": "1.0.0",
+    "description": "INTERNET BANKING SYSTEM",
+    "main: Script.js",
+
+    "scripts": {
+        "test": ""
+
+    }
  }
