--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "express": "^4.21.2",
     "mangodb": "^1.0.0",
     "mongoose": "^8.8.4",
-    "nodejs": "^0.0.0".
+    "nodejs": "^0.0.0"
   }
 }
